<resources>
    <string name="app_name">Coffee Shop</string>
    <string name="uploadImage">Upload Image</string>
    <string name="user_name">User Name</string>
    <string name="phone">+92\–123\-4567889</string>
    <string name="email">example@gmail.com</string>
    <string name="password">......</string>
    <string name="cuplogo">logo\n</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="skipped">skip</string>
    <string name="cafe">Cofi Cafy</string>
    <string name="or_with">or with</string>
    <string name="profile_image">profile</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="already">already have account? login</string>
    <string name="want_account">Want to create an Account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_Ups">Sign Up</string>
    <string name="logomain">mainlogo</string>
    <string name="burger">burger logo\n</string>
    <string name="descrip">description</string>
    <string name="names">name</string>
<!-- <string name="nameorder">name order</string>-->
    <string name="orderprice">price</string>
    <string name="dollar">$</string>
    <string name="image">1</string>
    <string name="_100">100</string>
    <string name="price">price</string>
<!--    <string name="orderItemName"> itemname</string>-->
    <string name="ordernumber">ordernumber</string>
    <string name="detaildescrip">Extra Cheese pizza with Tikka topping</string>
    <string name="detailimage">foodimage</string>
    <string name="namebox">Your name</string>
    <string name="phonebox">Phone</string>
    <string name="subtract">subtract</string>
    <string name="addorder">addorder</string>
    <string name="InsertBtn">Order Now</string>
    <string name="quantity">1</string>
    <string name="price2">100</string>
    <string name="my_orders">My Orders</string>
    <string name="pricetitle">price</string>
</resources>