<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/Detailimage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/detailimage"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/spare" />

            <TextView
                android:id="@+id/ordername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/names"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/orderButtonBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/subtract"
                    android:layout_width="24dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/subtract"
                    app:srcCompat="@drawable/minus" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:contentDescription="@string/quantity"
                    android:gravity="center"
                    android:text="@string/quantity"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <ImageView
                    android:id="@+id/addorder"
                    android:layout_width="24dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/addorder"
                    app:srcCompat="@drawable/plus" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detaildescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="9dp"
            android:text="@string/detaildescrip" />

        <EditText
            android:id="@+id/namebox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittextbackground"
            android:ems="10"
            android:hint="@string/namebox"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="9dp" />

        <EditText
            android:id="@+id/phonebox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittextbackground"
            android:ems="10"
            android:hint="@string/phonebox"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="9dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price2"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="#070707" />

        <Button
            android:id="@+id/InsertBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/endcolorgradient"
            android:text="@string/InsertBtn" />

    </LinearLayout>

</LinearLayout>