<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffeback"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundopacity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cuplogo"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            app:srcCompat="@drawable/clipart"
            app:tint="#FFFFFF"
            android:contentDescription="@string/cuplogo" />
        <TextView
            android:id="@+id/cafe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="30dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cafe"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/endcolorgradient"
            android:padding="8dp"
            android:text="@string/login_btn"
            android:textColor="#FAFFFFFF"
            android:textColorHighlight="#00FFFFFF"
            android:textColorHint="#FDFFFFFF"
            android:textColorLink="@color/startcolorgradient"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/endcolorgradient"
            android:padding="8dp"
            android:text="@string/register_btn"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/skipped"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/skipped"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>